testdata/baselines/reference/submodule/conformance/jsdocBindingInUnreachableCode.errors.txt
bug27341.js(3,16): error TS8010: Type annotations can only be used in TypeScript files.


==== bug27341.js (1 errors) ====
    if (false) {
        /**
         * @param {string} s
                   ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        const x = function (s) {
        };
    }
    